tests/fixtures/invalid/pow_bool_set_list.py
# Cannot call pow() with Bool, Set[int], List[int]
x = pow(True, {1, 2, 3}, [1, 2, 3])
